--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>3.3.1</version>
         </dependency>
 
+<dependency>
+	<groupId>com.fifesoft</groupId>
+	<artifactId>autocomplete</artifactId>
+	<version>2.6.1</version>
+</dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
